[package]
name = "harvest"
version = "0.1.0"
authors = ["QWYNG <ikusawasi@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CLI application that does your git stashes finds"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
regex = "1"
