[package]
name = "harvest"
version = "0.1.2"
authors = ["QWYNG <ikusawasi@gmail.com>"]
edition = "2018"
license = "MIT"
description = "CLI application that does your git stashes finds"
repository = "https://github.com/QWYNG/harvest"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
pager = "0.15.0"
assert_cmd = "1.0.1"
